fix alignment in instructions

--- a/scss/layouts/sidebar/_instructions.scss
+++ b/scss/layouts/sidebar/_instructions.scss
@@ -301,7 +301,7 @@
 
         margin-top: em(45px);
         margin-bottom: em(15px);
-        padding: em(5px);
+        padding: 0.25em;
         padding-right: 0;
 
         border: 1px solid #939596;
